<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_deal"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/nav_deal" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_wish_list" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/nav_wallet" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_track_order"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/nav_track" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_feedback" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_policies" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
    </group>


</menu>
